@@ -1,4 +1,4 @@
-<?php $this->beginContent('application.views.layouts.main'); ?>
+<?php $this->beginContent('//layouts/main'); ?>
 <div class="container">
 	<div class="span-19">
 		<div id="content">
