@@ -31,6 +31,7 @@ Version 1.1.3 to be released
 - Enh #952: Enhanced support for using defaultParams in CUrlManager (Qiang)
 - Enh #1015: Added automatic column initialization when non-active data provider is used for CGridView (Qiang)
 - Enh #1022: Added CMenu::activateItems (Qiang)
+- Enh #1043: Improved view resolution to support using themeable application views in a module (Qiang)
 - Enh #1127: Added support to automatically generate maxlength attribute for text/password inputs based on model rules (Qiang)
 - Enh #1151: Added support to generate grid column header based on attribute names (Qiang)
 - Enh #1158: Added translations in Latvian (lafriks)
